# cookiecutter-django

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .dockerignore  .env-EXAMPLE  .env-dev  .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: asgi.py  settings.py  urls.py  wsgi.py
