[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
crispy-bootstrap5 = "^2024.2"
django = "^5.0.3"
django-crispy-forms = "^2.1"
django-environ = "^0.11.2"
django-htmx = "^1.17.3"
django-redis = "^5.4.0"
django-render-block = "^0.9.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
sentry-sdk = "^1.44.0"
{% if cookiecutter.whitenoise_static %}
whitenoise = "^6.6.0"
{% endif %}
{% if cookiecutter.enable_s3_storage %}
django-storages = "^1.14.2"
boto3 = "^1.34.74"
{% endif %}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
django-coverage-plugin = "^3.1.0"
django-debug-toolbar = "^4.3.0"
django-extensions = "^3.2.3"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
factory-boy = "^3.3.0"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
ipdb = "^0.13.13"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
pylint-celery = "^0.3"
pylint-django = "^2.5.5"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manage = "manage:main"
server = "manage:server"

[tool.djlint]
use_gitignore=true
ignore="H006,H013"
